--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,13 @@
 </head>
 <body>
 
-    <h2>Hello Express and Ejs (<%= answer %>) (v12)</h2>
+    <h2>Hello Express and Ejs (<%= answer %>) (v15)</h2>
+    <div id="root">
+        Loading...
+    </div>
     
+
+    <script src="/bundle.js" charset="UTF-8"></script>
+
 </body>
 </html>
