--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,26 @@
-
-
 <%# 07/20/2020 12:54 pm - SSN - [20200720-0738] - [006] - M03 - Full-stack JavaScript with React.js #%>
 
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
 
     <title>P3114 (3) - Advanced React Application Example</title>
 </head>
+
 <body>
 
-    <h2>Hello Express and Ejs (<%= answer %>) (v15)</h2>
-    <div id="root">
-        Loading...
-    </div>
-    
+
+    <%#    // 07/21/2020 01:14 pm - SSN - [20200721-1305] - [001] - M03-P10 - Server-side rendering of React component #%>
+    <%# Must not leave space between div tags #%>
+
+    <div id="root"><%- initialContent -%></div>
 
     <script src="/bundle.js" charset="UTF-8"></script>
 
 </body>
+
 </html>
