--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
 
     <title>P3114 (3) - Advanced React Application Example</title>
+
+    <script>
+        window.initialData = <%- JSON.stringify(initialData) -%>;
+    </script>
+
 </head>
 
 <body>
