--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,9 @@
     <title>P3114 (3) - Advanced React Application Example</title>
 
     <script>
-        window.initialData = <%- JSON.stringify(initialData) -%>;
+        window.initialData = <%- initialData?JSON.stringify(initialData):"No initial data" -%>;
     </script>
+    <link rel="stylesheet" href="main.css">
 
 </head>
 
@@ -21,6 +22,10 @@
 
     <%#    // 07/21/2020 01:14 pm - SSN - [20200721-1305] - [001] - M03-P10 - Server-side rendering of React component #%>
     <%# Must not leave space between div tags #%>
+
+    <div class="topMenu">
+        <a href="/test_context">Context work</a>
+    </div>
 
     <div id="root"><%- initialContent -%></div>
 
