Completed seperating vendors files

--- a/views/test_context.ejs
+++ b/views/test_context.ejs
@@ -17,8 +17,17 @@
     <div id="root"></div>
     <div id="subOption"></div>
 
-    <script src="/bundle_101.js" charset="UTF-8"></script>
 
+    
+    <script src="/vendors~app_101~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/vendors~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/vendor__bundle.js" charset="UTF-8"></script>
+
+    <script src="/vendors~app_101~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/app_101__bundle.js" charset="UTF-8"></script>
+
+    
+    
 </body>
 
 </html>
