--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,13 @@
 
     <div id="root"><%- initialContent -%></div>
 
-    <script src="/bundle.js" charset="UTF-8"></script>
+    <script src="/vendors~app~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/vendors~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/vendor__bundle.js" charset="UTF-8"></script>
+    
+    
+    <script src="/vendors~app~vendor__bundle.js" charset="UTF-8"></script>
+    <script src="/app__bundle.js" charset="UTF-8"></script>
 
 </body>
 
